compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__convert_let_assert_bit_array_to_case.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 755
expression: "pub fn main() {\n  let assert <<bits1, bits2>> = <<73, 98>>\n}"
---
----- BEFORE ACTION
pub fn main() {
  let assert <<bits1, bits2>> = <<73, 98>>
               ▔▔▔▔▔▔▔▔▔▔▔↑               
}


----- AFTER ACTION
pub fn main() {
  let #(bits1, bits2) = case <<73, 98>> {
    <<bits1, bits2>> -> #(bits1, bits2)
    _ -> panic
  }
}
