compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__convert_let_assert_to_case_discard.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 710
expression: "pub fn main() {\n  let assert [_elem] = [6]\n}"
---
----- BEFORE ACTION
pub fn main() {
  let assert [_elem] = [6]
      ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑
}


----- AFTER ACTION
pub fn main() {
  let _ = case [6] {
    [_elem] -> Nil
    _ -> panic
  }
}
