compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__convert_let_assert_to_case_indented.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 686
expression: "pub fn main() {\n  {\n    let assert Ok(value) = Ok(1)\n  }\n}"
---
----- BEFORE ACTION
pub fn main() {
  {
    let assert Ok(value) = Ok(1)
               ↑                
  }
}


----- AFTER ACTION
pub fn main() {
  {
    let value = case Ok(1) {
      Ok(value) -> value
      _ -> panic
    }
  }
}
