compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__convert_let_assert_to_case_no_variables.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 721
expression: "pub fn main() {\n  let assert [] = []\n}"
---
----- BEFORE ACTION
pub fn main() {
  let assert [] = []
             ↑      
}


----- AFTER ACTION
pub fn main() {
  let _ = case [] {
    [] -> Nil
    _ -> panic
  }
}
