compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__different_annotations_create_compatible_type_variables.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1867
expression: "\npub fn do_generic_things(a, b) {\n  let a_value = a\n  let b_value = b\n  let other_value = a_value\n}\n"
---
----- BEFORE ACTION

pub fn do_generic_things(a, b) {
  let a_value = a
  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
  let b_value = b
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
  let other_value = a_value
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
}
↑


----- AFTER ACTION

pub fn do_generic_things(a, b) {
  let a_value: a = a
  let b_value: b = b
  let other_value: a = a_value
}
