compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__fill_in_labelled_args_selects_innermost_function.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1046
expression: "\npub fn main() {\n  wibble(\n    wibble()\n  )\n}\n\npub fn wibble(arg1 arg1, arg2 arg2) { Nil }\n "
---
----- BEFORE ACTION

pub fn main() {
  wibble(
    wibble()
           ↑
  )
}

pub fn wibble(arg1 arg1, arg2 arg2) { Nil }
 


----- AFTER ACTION

pub fn main() {
  wibble(
    wibble(arg1: todo, arg2: todo)
  )
}

pub fn wibble(arg1 arg1, arg2 arg2) { Nil }
